# paper-analytics

./: .gitignore  docker-compose.yml  prompts.txt  pyproject.toml
data/CrawlerData/BaseCrawlerData/: IEEEcloud_base_data.json  ccgrid_base_data.json  cloud_base_data.json  europar_base_data.json  eurosys_base_data.json  ic2e_base_data.json  icdcs_base_data.json  middleware_base_data.json  nsdi_base_data.json  sigcomm_base_data.json
data/CrawlerData/ExtendedCrawlerData/: ic2e_extended_data.json  middleware_extended_data.json
data/GraphDB/: relate.project.json
data/ProcessedData/: IEEEcloud_data.json  ccgrid_data.json  cloud_data.json  europar_data.json  eurosys_data.json  ic2e_data.json  icdcs_data.json  middleware_data.json  nsdi_data.json  sigcomm_data.json
data/RelationalDB/: IEEEcloud.db  ccgrid.db  cloud.db  europar.db  eurosys.db  ic2e.db  icdcs.db  middleware.db  nsdi.db  sigcomm.db
notebooks/: agents.ipynb  db_load.ipynb  multimodal_query.ipynb  query.ipynb  rag.ipynb
scripts/: db_initialization.py  paper_analytics_dashboard.py  ui_app.py
src/papers/: main.py
src/papers/domain/: agent_tools.py  citations_analyzer.py  db_loader.py  multimodal_paper_query.py  paper_analytics.py  rag.py
src/papers/io/: db.py  milvus.py  neo4j.py  sqlite.py
src/papers/utils/: models.py
