[project]
name = "tfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[hf-xet]>=0.30.2",
    "ipykernel>=6.29.5",
    "keybert>=0.9.0",
    "langchain>=0.3.23",
    "neo4j>=5.28.1",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pymilvus[model]>=2.5.6",
    "pyspark>=3.5.5",
    "sentence-transformers>=4.1.0",
    "stubs>=1.0.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[project.scripts]
main = 'src.papers.main:main'
db_initialization = "scripts.db_initialization:start"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]