[project]
name = "tfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[hf-xet]>=0.30.2",
    "ipykernel>=6.29.5",
    "keybert>=0.9.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.7",
    "langgraph-prebuilt>=0.2.1",
    "matplotlib>=3.10.3",
    "neo4j>=5.28.1",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pycountry-convert>=0.7.2",
    "pydantic>=2.11.3",
    "pymilvus[model]>=2.5.6",
    "pyspark>=3.5.5",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "stubs>=1.0.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
]

[project.scripts]
main = 'src.papers.main:main'
db_initialization = "scripts.db_initialization:start"
ui_app="scripts.ui_app:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
